// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Filter selector renders correctly 1`] = `
<DocumentFragment>
  <div
    class="filter-selector"
  >
    <div
      class="filter-selector-content"
    >
      <button
        aria-controls="test-filter-selectors"
        aria-expanded="false"
        aria-haspopup="true"
        class="btn btn-default filter-selector-button button-icon contains"
      >
         
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Filter selector renders correctly with another default filter 1`] = `
<DocumentFragment>
  <div
    class="filter-selector"
  >
    <div
      class="filter-selector-content"
    >
      <button
        aria-controls="test-filter-selectors"
        aria-expanded="false"
        aria-haspopup="true"
        class="btn btn-default filter-selector-button button-icon equal"
      >
         
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Filter selector renders correctly with aria-label 1`] = `
<DocumentFragment>
  <div
    class="filter-selector"
  >
    <div
      class="filter-selector-content"
    >
      <button
        aria-controls="test-filter-selectors"
        aria-expanded="false"
        aria-haspopup="true"
        aria-label="my label"
        class="btn btn-default filter-selector-button button-icon contains"
      >
         
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Filter selector renders correctly with filter selectors open 1`] = `
<body>
  <div>
    <div
      class="filter-selector"
    >
      <div
        class="filter-selector-content"
      >
        <button
          aria-controls="test-filter-selectors"
          aria-expanded="true"
          aria-haspopup="true"
          class="btn btn-default filter-selector-button button-icon contains"
        >
           
        </button>
        <ul
          class="filter-selectors"
          data-focusindex="0"
          id="test-filter-selectors"
          role="menu"
          style="position: fixed; top: 0px;"
        >
          <li
            class="filter-selected"
            role="menuitem"
            tabindex="0"
          >
            <div
              aria-hidden="true"
              class="filter-icon contains"
            />
            <div
              class="filter-label"
            >
              Contains
            </div>
          </li>
          <li
            class=""
            role="menuitem"
            tabindex="0"
          >
            <div
              aria-hidden="true"
              class="filter-icon startsWith"
            />
            <div
              class="filter-label"
            >
              Starts with
            </div>
          </li>
          <li
            class=""
            role="menuitem"
            tabindex="0"
          >
            <div
              aria-hidden="true"
              class="filter-icon endsWith"
            />
            <div
              class="filter-label"
            >
              Ends with
            </div>
          </li>
          <li
            class=""
            role="menuitem"
            tabindex="0"
          >
            <div
              aria-hidden="true"
              class="filter-icon greater"
            />
            <div
              class="filter-label"
            >
              Greater than
            </div>
          </li>
          <li
            class=""
            role="menuitem"
            tabindex="0"
          >
            <div
              aria-hidden="true"
              class="filter-icon greaterEqual"
            />
            <div
              class="filter-label"
            >
              Greater than or equal
            </div>
          </li>
          <li
            class=""
            role="menuitem"
            tabindex="0"
          >
            <div
              aria-hidden="true"
              class="filter-icon equal"
            />
            <div
              class="filter-label"
            >
              Equal
            </div>
          </li>
          <li
            class=""
            role="menuitem"
            tabindex="0"
          >
            <div
              aria-hidden="true"
              class="filter-icon notEqual"
            />
            <div
              class="filter-label"
            >
              Not equal
            </div>
          </li>
          <li
            class=""
            role="menuitem"
            tabindex="0"
          >
            <div
              aria-hidden="true"
              class="filter-icon smaller"
            />
            <div
              class="filter-label"
            >
              Smaller than
            </div>
          </li>
          <li
            class=""
            role="menuitem"
            tabindex="0"
          >
            <div
              aria-hidden="true"
              class="filter-icon smallerEqual"
            />
            <div
              class="filter-label"
            >
              Smaller than or equal
            </div>
          </li>
        </ul>
      </div>
    </div>
  </div>
</body>
`;
